<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_name"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <io.agora.karaoke_view_ex.ScoringView
        android:id="@+id/scoring_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/holo_orange_light"
        app:hitScoreThreshold="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:movingPixelsPerMs="0.4"
        app:pitchIndicatorRadius="6dp"
        app:pitchStickHeight="6dp"
        app:startPointHorizontalBias="0.4" />


    <io.agora.karaoke_view_ex.LyricsView
        android:id="@+id/lyrics_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/purple_200"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:currentLineHighlightedTextColor="#FFF44336"
        app:currentLineTextColor="#FFFFFF"
        app:currentLineTextSize="20sp"
        app:labelWhenNoLyrics=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoring_view"
        app:lineSpacing="6dp"
        app:paddingTop="4dp"
        app:textGravity="center"
        app:textSize="12sp" />

    <RadioGroup
        android:id="@+id/role_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/join_room_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/join_room_btn">

        <RadioButton
            android:id="@+id/radio_song_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_full" />

        <RadioButton
            android:id="@+id/radio_song_high_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_high_part" />
    </RadioGroup>

    <Button
        android:id="@+id/join_room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/join"
        app:layout_constraintStart_toEndOf="@id/role_radio_group"
        app:layout_constraintTop_toBottomOf="@id/lyrics_view" />

    <Button
        android:id="@+id/interface_test_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/interface_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyrics_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_list_rv"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toStartOf="@id/play_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_radio_group" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_radio_group" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_btn" />

    <Button
        android:id="@+id/play_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/play_original"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stop_btn" />

    <Button
        android:id="@+id/skip_the_intro_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/skip_the_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_mode_btn" />

    <Button
        android:id="@+id/set_audio_pitch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/set_audio_pitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip_the_intro_btn" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>